# openpod-5

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
build-logic/: settings.gradle.kts
docs/: medical-audit-remediation-plan.md  (+5 more)
emulator/: RASPBERRY_PI.md  README.md  deploy-to-pi.sh  openpod-emulator.service  openpod-setup.sh  pi-logs.sh  pyproject.toml  restart-emulator.sh  run.py  stop-emulator.sh  test-ble-bolus.sh  test-ble-pairing.sh
emulator/omnipod_emulator/: __init__.py  debug_bridge.py  debug_ltk_store.py  persistence.py  version.py
emulator/omnipod_emulator/ble/: __init__.py  constants.py  server.py  transport.py
emulator/omnipod_emulator/crypto/: __init__.py  aes_ccm.py  crc16.py  eap_aka.py  ecdh.py  kdf.py  milenage.py
emulator/omnipod_emulator/pod/: __init__.py  state.py
emulator/omnipod_emulator/protocol/: __init__.py  activation.py  commands.py  pairing.py  rhp.py  rhp_dispatcher.py  rhp_handlers.py  session.py  sp_codec.py  twi_command.py
emulator/omnipod_emulator/tcp/: __init__.py  server.py
emulator/tests/: test_aes_ccm.py  test_ble_constants.py  test_ble_transport.py  test_crc16.py  test_debug_bridge.py  test_debug_ltk_store.py  test_eap_aka_mac.py  test_ecdh.py  test_host_bridge_integration.py  test_kdf.py  test_milenage.py  test_native_vectors.py  test_pairing.py  test_pod_state.py  test_protocol_session.py  test_rhp.py  test_rhp_handlers.py  test_sp_codec.py  test_tcp_server.py  test_twi_command.py
(+251 files in other folders)
